# shut-the-box

./: .gitignore  01-sprint.md  02-sprint.md  AI_SYSTEM_PROMPT.md  CI_UPDATES.md  CLAUDE.md  README.md  rye-to-uv-migration-research-report.md
.github/workflows/: ci.yml  quarto-deploy.yml
analysis/: README.md  _quarto.yml  index.qmd  methodology.qmd  render_reports.sh  simulator-showcase.qmd  statistical-insights.qmd  strategy-comparison.qmd  strategy_comparison.qmd  strategy_comparison_basic.qmd  styles.css  test_simulation.py
analysis/_output/: strategy_comparison.html  strategy_comparison_basic.html
analysis/_site/: index.html  simulator-showcase.html  statistical-insights.html  strategy-comparison.html  strategy_comparison.html  strategy_comparison_basic.html
analysis/_site/site_libs/bootstrap/: bootstrap-8fb6407771204d852c7e87da2b12a797.min.css
shut_the_box_sim/: .pre-commit-config.yaml  CODE_STANDARDS.md  COMMANDS.md  DEVELOPMENT_GUIDE.md  README.md  logger-advice.md  mypy.ini  noxfile.py  old_noxfile.py  pyproject.toml
shut_the_box_sim/scripts/: autofix.sh  lint.sh  typecheck.sh
shut_the_box_sim/scripts/dev/: bootstrap_uv.sh
shut_the_box_sim/src/stbsim/: __init__.py  board.py  cli.py  core.py  dice.py  events.py  game.py  loggers.py  player.py  simulation.py  stats.py  strategies.py  turn_manager.py
shut_the_box_sim/tests/: test_cli_golden.py  test_core.py  test_core_domain.py  test_logger_events.py
shut_the_box_sim/tests/fixtures/: cli_golden_run_output.txt
shut_the_box_sim/tmp/: refactor-to-uv.md  type-fixes.md  uv-refactor-implementation.md
